--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,13 @@ proguard/
 
 # Log Files
 *.log
+
+.idea/workspace.xml
+*.iml
+local.properties
+.idea/workspace.xml
+.idea/libraries
+.DS_Store
+build
+captures
+.externalNativeBuild
