--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.aepronunciation.ipa"
         minSdkVersion 9
         targetSdkVersion 25
-        versionCode 9
-        versionName "2.0.0 beta 8"
+        versionCode 10
+        versionName "2.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
