added personal evaluation option

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,14 @@
                 android:value=".MainActivity" />
             >
         </activity>
+        <activity android:name=".PersonalEvaluationActivity"
+            android:label="@string/main_menu_personal_evaluation"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+            >
+        </activity>
         <activity
             android:name=".TestActivity"
             android:theme="@style/AppFullScreenTheme"
